--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -1,4 +1,22 @@
 .grid {
+  margin: 30px;
+}
+
+.grid-totals {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.grid-totals .total {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.grid-rows {
   display: flex;
   flex-direction: column;
   grid-gap: 10px;
