--- a/src/components/grid.css
+++ b/src/components/grid.css
@@ -28,19 +28,34 @@
   flex-direction: row;
   grid-gap: 10px;
   width: 100%;
-  height: 60px;
+  height: 80px;
 }
 
 .grid .grid-space {
-  width: 60px;
-  height: 60px;
+  width: 80px;
+  height: 80px;
   background-color: #666;
   color: white;
   border-radius: 5px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
+  padding: 3px;
+  grid-gap: 5px;
+}
+
+.grid .grid-space img {
+  width: 30px;
+  height: 30px;
+}
+
+.grid .grid-space .progress {
+  height: 10px;
+}
+.grid .grid-space .progress .progress-bar {
+  background-color: red;
 }
 
 .grid .grid-space.card {
