--- a/src/components/card-packs.css
+++ b/src/components/card-packs.css
@@ -1,13 +1,21 @@
 .card-packs {
+  width: 100px;
+}
+
+.card-packs h4 {
+  color: white;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.card-pack-list {
   float: right;
   display: flex;
   flex-direction: column;
-
-  width: 100px;
   grid-gap: 10px;
 }
 
-.card-packs .card-pack {
+.card-pack-list .card-pack {
   width: 100%;
   height: 50px;
   color: white;
@@ -16,6 +24,6 @@
   cursor: pointer;
 }
 
-.card-packs .card-pack:hover {
+.card-pack-list .card-pack:hover {
   background-color: #666;
 }
