--- a/src/components/progress-bar.css
+++ b/src/components/progress-bar.css
@@ -1,7 +1,10 @@
 .progress {
   width: 100%;
-  height: 40px;
   border: 2px solid white;
+}
+
+.progress.no-border {
+  border: none;
 }
 
 .progress-bar {
