--- a/src/components/grid.scss
+++ b/src/components/grid.scss
@@ -119,5 +119,17 @@ $card-height: 100px;
         filter: opacity(0.5);
       }
     }
+
+    .disabled-slash {
+      color: rgba(200, 0, 0, 0.75);
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 }
