All producing cards now show their total production
 - Updated mushroom description to mention diagonal adjacency
 - Cards with cost per sec now display them on the grid.
 - Expired food now shows the status tip on the grid.

--- a/src/components/grid.scss
+++ b/src/components/grid.scss
@@ -98,7 +98,7 @@ $card-height: 100px;
     left: 0;
     font-weight: bold;
 
-    .ability {
+    .ability, .ability-cost {
       display: flex;
       align-items: center;
       grid-gap: 3px;
