Added prestige button with increasing cost

--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -21,6 +21,12 @@ header {
       padding: 4px;
     }
   }
+
+  .prestige {
+    button {
+      margin-right: 6px;
+    }
+  }
 }
 
 .help-modal-content {
