--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -1,3 +1,5 @@
+@import '../shared/shared.scss';
+
 header {
   display: flex;
   flex-direction: row;
@@ -23,6 +25,26 @@ header {
   }
 
   .prestige {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .open-menu {
+      appearance: none;
+      background: none;
+      border: $light-border;
+      border-radius: 5px;
+
+      img {
+        width: 20px;
+        height: 20px;
+      }
+
+      &:hover {
+        border-color: #999;
+      }
+    }
+
     button {
       margin-right: 6px;
     }
