--- a/src/App.scss
+++ b/src/App.scss
@@ -37,6 +37,12 @@ footer {
   }
 }
 
+.__react_component_tooltip.standard-tooltip {
+  padding: 8px 8px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
 * {
   box-sizing: border-box;
 }
