Massive refactor of how card abilities are defined
 - Uses best practices of co-locating data into nested groups. Moved
   concepts like "Ability.Produce" and it's related properties into an
   object called "passive".
 - Updated the way card descriptions are generated to be more automated.

--- a/src/components/card-packs.scss
+++ b/src/components/card-packs.scss
@@ -1,6 +1,6 @@
 .card-packs {
   width: 100%;
-  min-width: 200px;
+  min-width: 240px;
   max-width: 350px;
   margin-top: 50px;
 
@@ -33,6 +33,7 @@
   > .cards {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     grid-gap: 6px;
     margin-bottom: 10px;
 
