Added food capacity ability for cards
 - Ambrosia is has food capacity buff and is added to food pack.
 - Ultra Rare cards are now displayed with a gold highlight.
 - Added a full grid MatchingGridShape

--- a/src/components/card-packs.scss
+++ b/src/components/card-packs.scss
@@ -53,6 +53,11 @@
         border: 1px dashed #333;
       }
 
+      &.ultra-rare {
+        border-color: rgb(189, 165, 30);
+        color: rgb(189, 165, 30);
+      }
+
       img {
         width: 16px;
         height: 16px;
