Added scaledToResource setting to passive abilities
 - Lumberjack is in dirt pack and school house in the stone pack now.

--- a/src/components/grid.scss
+++ b/src/components/grid.scss
@@ -97,6 +97,8 @@ $card-height: 100px;
     top: 0;
     left: 0;
     font-weight: bold;
+    padding: 4px;
+    text-align: center;
 
     .ability, .ability-cost {
       display: flex;
