Completed the max buy feature
 - Tested different scenarios!
 - Fixed bug with buying card packs sometimes being free.
 - Changed card pack cost reduction to affect base cost for easier
 calculations.

--- a/src/components/card-packs.scss
+++ b/src/components/card-packs.scss
@@ -65,7 +65,10 @@
     }
   }
 
-  .purchase-button {
-    float: right;
+  .buy-buttons {
+    display: flex;
+    flex-direction: column;
+    grid-gap: 6px;
+    align-items: flex-end;
   }
 }
