Added import and export controls

--- a/src/components/header/options-modal.scss
+++ b/src/components/header/options-modal.scss
@@ -11,6 +11,28 @@
     }
   }
 
+  .import, .export {
+    input {
+      margin-right: 10px;
+    }
+  }
+  .export {
+    margin-top: 10px;
+    position: relative;
+
+    .clipboard-badge {
+      margin-left: 10px;
+      background-color: rgba(0, 0, 0, 0.75);
+      border-radius: 5px;
+      padding: 5px 10px;
+      opacity: 0;
+
+      &.show {
+        opacity: 1;
+      }
+    }
+  }
+
   .save-buttons {
     display: flex;
     grid-gap: 20px;
