--- a/src/components/card-list.scss
+++ b/src/components/card-list.scss
@@ -159,3 +159,29 @@ $card-height: 220px;
     }
   }
 }
+
+.card-mastery-modal {
+  width: 300px;
+  padding: 30px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  grid-gap: 10px;
+
+  h3 {
+    margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .card-mastery-bonus {
+    margin-bottom: 20px;
+  }
+
+  .card-mastery-progress {
+    font-size: 24px;
+
+    display: flex;
+    grid-gap: 10px;
+  }
+}
