--- a/src/shared/components/card-buttons.scss
+++ b/src/shared/components/card-buttons.scss
@@ -1,15 +1,12 @@
-$button-size: 60px;
-
 .card-buttons {
   z-index: -1;
   position: absolute;
-  left: -$button-size;
+  transform: translateX(-100%);
   top: 5px;
   padding: 10px 0 10px 10px;
   display: flex;
   flex-direction: column;
   grid-gap: 10px;
-  width: $button-size;
   background-color: rgba(30, 30, 30, 0.9);
   border-radius: 5px;
 }
@@ -20,7 +17,7 @@ $button-size: 60px;
   appearance: none;
   border-radius: 3px;
   padding: 4px 4px;
-  width: $button-size + 10px;
+  width: calc(100% + 10px);
   text-align: left;
   background-color: #666;
   color: #CCC;
