--- a/src/components/card-list.scss
+++ b/src/components/card-list.scss
@@ -144,6 +144,7 @@ $card-height: 220px;
     left: 5px;
     display: flex;
     grid-gap: 10px;
+    flex-wrap: wrap;
 
     .stat {
       border: 2px solid #333;
