Added card mastery help content
 - Updated reserved food help content. Added image.
 - Changed reserved food slots to say "(reserved)" on hover.

--- a/src/components/header/help-modal.scss
+++ b/src/components/header/help-modal.scss
@@ -1,5 +1,8 @@
-.help-modal-content {
-  .help-screenshot {
-    height: 200px;
-  }
+.flow-around {
+  overflow: visible;
+}
+
+.float-right {
+  margin-left: 20px;
+  float: right;
 }
