Completed Auto Sacrifice All Feature
 - Also added clear grid, sacrifice up to level and sacrifice max cards features
 - Fixed card mastery not being reset when complete reset happens

--- a/src/components/card-list.scss
+++ b/src/components/card-list.scss
@@ -184,4 +184,10 @@ $card-height: 220px;
     display: flex;
     grid-gap: 10px;
   }
+
+  .card-mastery-sacrifice-buttons {
+    display: flex;
+    grid-gap: 10px;
+    justify-content: center;
+  }
 }
