--- a/src/components/header/prestige-prompt-modal.scss
+++ b/src/components/header/prestige-prompt-modal.scss
@@ -1,4 +1,10 @@
-.prestige-prompt-modal {
+.prestige-prompt {
   width: 100%;
 
+  .action-buttons {
+    display: flex;
+    grid-gap: 10px;
+
+    margin-top: 20px;
+  }
 }
