--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,6 +8,7 @@ header {
   color: white;
   padding: 4px 8px;
   background-color: #4D4D4D;
+  z-index: 10;
 
   h1 {
     display: inline-block;
@@ -18,7 +19,8 @@ header {
   .options {
     display: flex;
     flex-direction: row;
-    grid-gap: 8px;
+    grid-gap: 16px;
+    margin-right: 14px;
 
     button {
       padding: 0;
@@ -38,10 +40,9 @@ header {
   gap: 8px;
 
   button {
-    z-index: -1;
     font-size: 1rem;
-    background-color: #4D4D4D;
-    color: #AAA;
+    background-color: #444;
+    color: #CCC;
     padding: 6px 8px;
     box-shadow: #222 0px 0px 3px 1px;
     appearance: none;
@@ -49,6 +50,16 @@ header {
     border: none;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+
+    &:hover {
+      background-color: #555;
+    }
+    &.current {
+      background-color: #4D4D4D;
+      color: #DDD;
+      font-weight: bold;
+      cursor: default;
+    }
   }
 }
 
