Basic Combat Scene
 - Basic combat encounter selection based on config
 - Each encounter contains a grid of enemies.
 - Displays a grid for enemy and player.

--- a/src/shared/shared.scss
+++ b/src/shared/shared.scss
@@ -2,11 +2,12 @@
 $text-color: white;
 $light-bg: #444;
 $light-border: 1px solid #333;
+$box-shadow: #222 0px 0px 3px 1px;
 
 .on-card-button {
   background-color: #888;
   border: 1px solid #777;
-  box-shadow: #222 0px 0px 3px 1px;
+  box-shadow: $box-shadow;
   border-radius: 3px;
   outline: none;
   cursor: pointer;
@@ -19,7 +20,7 @@ $light-border: 1px solid #333;
 .secondary-button {
   background-color: #AAA;
   border: 1px solid #777;
-  box-shadow: #222 0px 0px 3px 1px;
+  box-shadow: $box-shadow;
   border-radius: 3px;
   outline: none;
   cursor: pointer;
