Town grid can be panned by dragging mouse
 - Made sure town grid resizes to fit remaining space on the screen

--- a/src/components/town/card-list.scss
+++ b/src/components/town/card-list.scss
@@ -5,8 +5,7 @@ $card-list-padding: 10px;
 
 .card-inventory {
   box-sizing: border-box;
-  width: 100%;
-  max-width: $card-width * 2 + $cards-gap + $card-list-padding * 2;
+  width: $card-width * 2 + $cards-gap + $card-list-padding * 2;
   max-height: 600px;
   
   > .cards {
