--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,8 @@ body {
 .content {
   display: flex;
   justify-content: center;
-  padding: 0 30px;
+  padding: 0 30px 30px;
+  height: 100%;
 }
 
 footer {
