--- a/src/components/town/card-list.scss
+++ b/src/components/town/card-list.scss
@@ -53,7 +53,7 @@ $card-list-padding: 10px;
 .card-list .card-container {
   position: relative;
   width: $card-width;
-  height: 40px;
+  height: 64px;
   overflow: hidden;
 
   &:hover {
@@ -77,7 +77,7 @@ $card-list-padding: 10px;
   border: 2px solid #555;
   display: flex;
   flex-direction: column;
-  grid-gap: 20px;
+  grid-gap: 10px;
 
   &:hover {
     background-color: #666;
@@ -111,6 +111,13 @@ $card-list-padding: 10px;
     .icon {
       filter: drop-shadow(1px 1px 6px black);
     }
+  }
+
+  .cost {
+    display: flex;
+    gap: 4px;
+    align-items: center;
+    padding-left: 7px;
   }
 
   .description {
