Reseting game back to using wood as main resource
 - Farms and lumberjack are starting cards.
 - Berries cannot be bought at the start.
 - Refactored card cost to be optional.
 - Major refactor for how prestige packa and upgrades id is managed.
   This brings full type safety to ids of config objects finally. The
   same needs to be applied to everything in a future commit!

--- a/src/components/town/market-list.scss
+++ b/src/components/town/market-list.scss
@@ -115,6 +115,7 @@ $card-list-padding: 10px;
 
   .cost {
     display: flex;
+    min-height: 16px;
     gap: 4px;
     align-items: center;
     padding-left: 7px;
